--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ header nav:last-child .second-row:hover {
 .about .wrapper p {
   width: 52vw;
   font-family: "Roboto", sans-serif;
-  font-size: 0.78vw;
+  font-size: 0.9vw;
   color: #999999;
   display: block;
   margin: auto;
@@ -448,7 +448,7 @@ header nav:last-child .second-row:hover {
 
 .services .wrapper div p {
   font-family: "Roboto", sans-serif;
-  font-size: 0.78vw;
+  font-size: 0.9vw;
   color: #999999;
   line-height: 1.6;
   margin-bottom: 3vh;
@@ -528,10 +528,24 @@ header nav:last-child .second-row:hover {
   background-image: url("./images/layer_mountains.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
   height: 80vh;
   text-align: center;
   padding-top: 12vh;
   margin-bottom: 12vh;
+}
+
+.design div img {
+  display: block;
+  position: absolute;
+  bottom: -10%;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0%);
+          transform: translate(-50%, 0%);
+  width: auto;
+  height: auto;
+  margin: auto;
+  padding-left: 7%;
 }
 
 .design .wrapper h5 {
@@ -560,15 +574,6 @@ header nav:last-child .second-row:hover {
   background-color: #f38181;
 }
 
-.design .wrapper div img {
-  display: block;
-  width: auto;
-  height: auto;
-  margin: auto;
-  margin-top: 4.7%;
-  padding-left: 7%;
-}
-
 @media screen and (max-width: 1200px) {
   .design .wrapper div img {
     margin-top: 2.7%;
@@ -587,7 +592,7 @@ header nav:last-child .second-row:hover {
     padding-top: 5vh;
   }
   .design .wrapper div img {
-    width: 500px;
+    width: 31rem;
     height: auto;
   }
 }
@@ -647,7 +652,7 @@ header nav:last-child .second-row:hover {
 .weDo .wrapper p {
   width: 52vw;
   font-family: "Roboto", sans-serif;
-  font-size: 0.78vw;
+  font-size: 0.9vw;
   color: #999999;
   display: block;
   margin: auto;
@@ -718,7 +723,7 @@ header nav:last-child .second-row:hover {
 .weDo .wrapper .creativity .right div:nth-child(2) p {
   padding: 0 10% 0 3.5%;
   font-style: italic;
-  font-size: 0.78vw;
+  font-size: 0.9vw;
   line-height: 1.7;
   width: 29vw;
   margin-bottom: 2vh;
@@ -780,7 +785,7 @@ header nav:last-child .second-row:hover {
 @media screen and (max-width: 670px) {
   section.weDo {
     padding-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 10%;
   }
   .weDo .wrapper h2 {
     padding-bottom: 25px;
@@ -873,7 +878,7 @@ header nav:last-child .second-row:hover {
     width: 50%;
   }
   .slides .wrapper .third h5::after {
-    width: 30px;
+    width: 25px;
   }
   .slides .wrapper .third p {
     margin-left: 0;
@@ -884,15 +889,35 @@ header nav:last-child .second-row:hover {
   .slides .wrapper .second {
     border: none;
     padding: 4px;
+    width: 50px;
   }
 }
 
 @media screen and (max-width: 840px) {
   .slides .wrapper .third {
-    width: 54%;
+    width: 45%;
   }
   .slides .wrapper .third h5 {
     padding-left: 9vw;
+  }
+  .slides .wrapper div {
+    padding: 0 20px;
+  }
+  .slides .wrapper a {
+    padding: 0 20px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .slides .wrapper .second {
+    width: 45px;
+    padding: 2px;
+  }
+  .slides .wrapper a {
+    padding: 0 15px;
+  }
+  .slides .wrapper .third h5::after {
+    width: 15px;
   }
 }
 
@@ -929,7 +954,7 @@ header nav:last-child .second-row:hover {
 .ourTeam .wrapper p {
   width: 52vw;
   font-family: "Roboto", sans-serif;
-  font-size: 0.78vw;
+  font-size: 0.9vw;
   color: #999999;
   display: block;
   margin: auto;
@@ -967,7 +992,7 @@ header nav:last-child .second-row:hover {
 .ourTeam .wrapper .center p,
 .ourTeam .wrapper .right p {
   font-family: "Roboto", sans-serif;
-  font-size: 0.78vw;
+  font-size: 0.9vw;
   font-weight: lighter;
   font-style: italic;
   width: 7.8vw;
@@ -1388,7 +1413,7 @@ header nav:last-child .second-row:hover {
 .ourWorks .wrapper p {
   width: 52vw;
   font-family: "Roboto", sans-serif;
-  font-size: 0.78vw;
+  font-size: 0.9vw;
   color: #999999;
   display: block;
   margin: auto;
@@ -1487,8 +1512,7 @@ header nav:last-child .second-row:hover {
   display: block;
 }
 
-.wallpaper .first .overlay,
-.wallpaper .second .overlay {
+.wallpaper .overlay {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -1502,8 +1526,7 @@ header nav:last-child .second-row:hover {
   text-align: center;
 }
 
-.wallpaper .first .overlay img,
-.wallpaper .second .overlay img {
+.wallpaper .overlay img {
   position: absolute;
   left: 50%;
   top: 45%;
@@ -1512,8 +1535,7 @@ header nav:last-child .second-row:hover {
   width: auto;
 }
 
-.wallpaper .first .overlay .text,
-.wallpaper .second .overlay .text {
+.wallpaper .overlay .text {
   position: absolute;
   left: 50%;
   top: 55%;
@@ -1522,18 +1544,16 @@ header nav:last-child .second-row:hover {
   width: auto;
 }
 
-.wallpaper .first .overlay .text h3,
-.wallpaper .second .overlay .text h3 {
-  font-size: 14px;
+.wallpaper .overlay .text h3 {
+  font-size: 1vw;
   font-family: "Montserrat";
   color: #ffffff;
 }
 
-.wallpaper .first .overlay .text h2,
-.wallpaper .second .overlay .text h2 {
+.wallpaper .overlay .text h2 {
   color: #ffffff;
   font-family: "Roboto", sans-serif;
-  font-size: 15px;
+  font-size: 1.1vw;
   font-style: italic;
   padding-top: 10px;
 }
@@ -1541,6 +1561,24 @@ header nav:last-child .second-row:hover {
 @media screen and (max-width: 1290px) {
   .wallpaper {
     margin-bottom: 5vh;
+  }
+}
+
+@media screen and (max-width: 1010px) {
+  .wallpaper .overlay .text {
+    left: 50%;
+    top: 65%;
+    -webkit-transform: translate(-50%, -25%);
+            transform: translate(-50%, -25%);
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .wallpaper .overlay .text {
+    left: 50%;
+    top: 75%;
+    -webkit-transform: translate(-50%, -35%);
+            transform: translate(-50%, -35%);
   }
 }
 
@@ -1641,8 +1679,24 @@ header nav:last-child .second-row:hover {
 
 @media screen and (max-width: 840px) {
   .slides2 .wrapper .third {
-    width: 54%;
+    width: 50%;
     line-height: 20px;
+    padding-right: 0px;
+  }
+  .slides2 .wrapper .third h6 {
+    padding-left: 30px;
+  }
+  .slides2 .wrapper .second {
+    padding: 0px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .slides2 .wrapper .third {
+    width: 45%;
+  }
+  .slides2 .wrapper .second {
+    width: 35%;
   }
 }
 
@@ -1744,7 +1798,7 @@ header nav:last-child .second-row:hover {
 
 .clients .wrapper .top-row .sloping,
 .clients .wrapper .bottom-row .sloping {
-  font-size: 0.78vw;
+  font-size: 0.9vw;
   color: #333333;
   font-family: "Roboto", sans-serif;
   font-style: italic;
@@ -1768,7 +1822,7 @@ header nav:last-child .second-row:hover {
 .clients .wrapper .top-row p,
 .clients .wrapper .bottom-row p {
   font-family: "Roboto", sans-serif;
-  font-size: 0.78vw;
+  font-size: 0.9vw;
   color: #999999;
   line-height: 1.5rem;
 }
@@ -1908,7 +1962,7 @@ header nav:last-child .second-row:hover {
 }
 
 .blog .wrapper article a p {
-  font-size: 0.78vw;
+  font-size: 0.9vw;
   line-height: 1.5;
   font-family: "Roboto", sans-serif;
   color: #999999;
@@ -2097,7 +2151,7 @@ footer .wrapper .left h2 {
 }
 
 footer .wrapper .left p {
-  font-size: 0.78vw;
+  font-size: 0.9vw;
   font-family: "Roboto", sans-serif;
   color: #999999;
   margin-bottom: 3.5vh;
@@ -2121,7 +2175,7 @@ footer .wrapper .left h3 span {
 footer .wrapper .left h4 {
   display: inline-block;
   font-family: "Roboto", sans-serif;
-  font-size: 0.78vw;
+  font-size: 0.9vw;
   font-style: italic;
   font-weight: lighter;
   color: #999999;
@@ -2245,13 +2299,33 @@ footer .wrapper .bottom p span {
 
 @media screen and (max-width: 1800px) {
   footer .wrapper .center {
-    margin-left: 0;
+    margin-left: 5%;
   }
   footer .wrapper .left {
     margin-right: 0;
+    width: 35%;
   }
   footer .wrapper .right {
     width: 25%;
+    margin-left: 5%;
+  }
+}
+
+@media screen and (max-width: 1712px) {
+  footer .wrapper .center a div {
+    padding: 1.2vw 0 2vw 1vw;
+  }
+}
+
+@media screen and (max-width: 1600px) {
+  footer .wrapper .center a div {
+    padding: 1.2vw 0 2vw 1vw;
+  }
+}
+
+@media screen and (max-width: 1499px) {
+  footer .wrapper .center a div {
+    padding: 1vw 0 4vw 0.9vw;
   }
 }
 
@@ -2266,9 +2340,12 @@ footer .wrapper .bottom p span {
   footer .wrapper .center {
     display: block;
     margin: auto;
-    width: 70%;
+    width: 40%;
     text-align: center;
     margin-bottom: 3%;
+  }
+  footer .wrapper .center a img {
+    padding-bottom: 2%;
   }
   footer .wrapper .right {
     display: block;
@@ -2284,6 +2361,7 @@ footer .wrapper .bottom p span {
             transform: translateX(0%);
   }
   footer .wrapper .right .vieta h4 {
+    font-size: 1.1vw;
     margin-top: 3%;
   }
 }
