--- a/style.scss
+++ b/style.scss
@@ -1011,6 +1011,7 @@ header {
         position: relative;
         max-width: 100%;
         height: auto;
+        cursor: pointer;
 
         > img {
           width: 100%;
@@ -1038,6 +1039,7 @@ header {
             margin-left: 20%;
             width: 228px;
             height: 57px;
+           
 
             button {
               width: 57px;
@@ -1049,6 +1051,7 @@ header {
               border-bottom: none;
               vertical-align: top;
               position: relative;
+              cursor: pointer;
 
               &:last-child {
                 border-right: none;
