--- a/style.scss
+++ b/style.scss
@@ -624,6 +624,12 @@ header {
     height: auto;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .design .wrapper div img {
+    width: 250px;
+  }
+}
 .weDo {
   // height: 80vh;
   text-align: center;
@@ -1371,6 +1377,12 @@ header {
   }
 }
 
+@media screen and (max-width: 345px) {
+  .logos {
+    height: 38vh;
+  }
+}
+
 @media screen and (max-width: 1123px) {
   .logos .wrapper .logo-images {
     transform: translate(-3%, 65%);
@@ -1697,6 +1709,17 @@ header {
   .slides2 .wrapper .second {
   width: 35%;
   }
+}
+
+@media screen and (max-width: 420px) {
+  .slides2 .wrapper .second img {
+    width: 90px;
+    height: 70px;
+  }
+
+  .slides2 .wrapper .third {
+    line-height: 10px;
+}
 }
 
 .clients {
